--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
     <footer>
         <div class="f">
             <div class="f-1">
-                <span><i class="fa-brands fa-instagram" style="color: beige;"></i><a href="#"> Instagram</a></span>
-                <span><i class="fa-brands fa-linkedin" style="color: beige;"></i><a href="#"> LinkedIn</a></span>
-                <span><i class="fa-brands fa-facebook-f" style="color: beige;"></i><a href="#"> Facebook </a></span>
-                <span><i class="fa-brands fa-twitter" style="color: beige;"></i><a href="#"> Twitter (X)</a></span>
+                <span class="f-1-1" ><i class="fa-brands fa-instagram" style="color: beige;"></i><a href="#"> Instagram</a></span>
+                <span class="f-1-1"><i class="fa-brands fa-linkedin" style="color: beige;"></i><a href="#"> LinkedIn</a></span>
+                <span class="f-1-1" ><i class="fa-brands fa-facebook-f" style="color: beige;"></i><a href="#"> Facebook </a></span>
+                <span ><i class="fa-brands fa-twitter" style="color: beige;"></i><a href="#"> Twitter (X)</a></span>
             </div>
             <div class="f-2">
                 <a class="ff" href="#">Privacy Policy</a>
